--- a/notebooks/01_run_pipeline.ipynb
+++ b/notebooks/01_run_pipeline.ipynb
@@ -86,22 +86,23 @@
      "text": [
       "c:\\Users\\ras\\scoop\\apps\\python\\3.14.0\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Rolling forward:  44%|████▍     | 225/513 [17:27<29:36,  6.17s/it]"
+      "Rolling forward: 100%|██████████| 513/513 [41:45<00:00,  4.88s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rolling-forward forecasting completed.\n"
      ]
     }
    ],
    "source": [
     "from src.rolling_forward_evaluate import rolling_forecast\n",
-    "rolling_forecast()"
+    "from src.rolling_data_processing import evaluate_rolling_forecast\n",
+    "rolling_forecast()\n",
+    "evaluate_rolling_forecast()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70cfc0cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
