checking the evaluation

--- a/notebooks/01_run_pipeline.ipynb
+++ b/notebooks/01_run_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e4437391",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "c2ce6bf3",
    "metadata": {},
    "outputs": [
@@ -53,19 +53,14 @@
      "output_type": "stream",
      "text": [
       "Monthly per-SKU predictions generated.\n",
-      "       sku_id year_month  predicted_monthly_qty  actual_monthly_qty  \\\n",
-      "0  555-HOU001    2023-10              74.352288                84.0   \n",
-      "1  555-HOU001    2023-11              99.911804                94.0   \n",
-      "2  555-HOU001    2023-12              56.227515                55.0   \n",
-      "3  555-HOU001    2024-01             115.531545               115.0   \n",
-      "4  555-HOU001    2024-02              92.317475               106.0   \n",
-      "\n",
-      "   abs_error  pct_error  \n",
-      "0   9.647712  11.485371  \n",
-      "1   5.911804   6.289154  \n",
-      "2   1.227515   2.231845  \n",
-      "3   0.531545   0.462213  \n",
-      "4  13.682525  12.908042  \n"
+      "===== DAILY vs ACTUAL =====\n",
+      "Daily MAE: 2.2019\n",
+      "Daily MAPE: 52.65%\n",
+      "Daily WAPE: 40.48%\n",
+      "===== MONTHLY vs ACTUAL =====\n",
+      "Monthly MAE: 20.9810\n",
+      "Monthly MAPE: 21.00%\n",
+      "Monthly WAPE: 13.69%\n"
      ]
     }
    ],
@@ -76,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f7c47333",
    "metadata": {},
    "outputs": [
@@ -84,16 +79,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ras\\scoop\\apps\\python\\3.14.0\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Rolling forward: 100%|██████████| 513/513 [41:45<00:00,  4.88s/it]\n"
+      "Rolling forward: 100%|██████████| 513/513 [05:41<00:00,  1.50it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rolling-forward forecasting completed.\n"
+      "Rolling-forward forecasting completed.\n",
+      "===== DAILY ROLLING vs ACTUAL =====\n",
+      "MAE  : 3.40\n",
+      "WAPE : 50.26%\n",
+      "\n",
+      "===== MONTHLY ROLLING vs ACTUAL =====\n",
+      "MAE  : 60.74\n",
+      "WAPE : 35.79%\n",
+      "Saved: rolling_daily_vs_actual.csv and rolling_monthly_vs_actual.csv\n"
      ]
     }
    ],
@@ -101,6 +102,34 @@
     "from src.rolling_forward_evaluate import rolling_forecast\n",
     "from src.rolling_data_processing import evaluate_rolling_forecast\n",
     "rolling_forecast()\n",
+    "evaluate_rolling_forecast()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0f59fc07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===== DAILY ROLLING vs ACTUAL =====\n",
+      "MAE  : 3.40\n",
+      "MAPE : 82.28%\n",
+      "WAPE : 50.26%\n",
+      "\n",
+      "===== MONTHLY ROLLING vs ACTUAL =====\n",
+      "MAE  : 60.74\n",
+      "MAPE : 38.83%\n",
+      "WAPE : 35.79%\n",
+      "Saved: rolling_daily_vs_actual.csv and rolling_monthly_vs_actual.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.rolling_data_processing import evaluate_rolling_forecast\n",
     "evaluate_rolling_forecast()"
    ]
   }
@@ -121,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
