--- a/notebooks/linear_regression.ipynb
+++ b/notebooks/linear_regression.ipynb
@@ -1,112 +1,185 @@
 {
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        },
-        "id": "Nw9KP22KuqTi",
-        "outputId": "40b8e4a0-b2b9-4d6d-de5a-d917a25b90a8"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "MAE: 3.2276853413185433\n",
-            "sku_id\n",
-            "TOP-DRI004    11.289736\n",
-            "SUN-BAL001    11.285942\n",
-            "ድንብ-FRU001    10.141077\n",
-            "BAN-FRU001    10.127757\n",
-            "POT-FRU001    10.102498\n",
-            "                ...    \n",
-            "VVG-CAN003     1.654136\n",
-            "TES-CAN002     1.649862\n",
-            "DAC-CAN002     1.648418\n",
-            "FAR-HOU002     1.646366\n",
-            "TUM-HOU009     1.639734\n",
-            "Name: abs_error, Length: 513, dtype: float64\n"
-          ]
-        }
-      ],
-      "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import mean_absolute_error\n",
-        "from src.config import DATA_PROCESSED\n",
-        "train_df = pd.read_csv(DATA_PROCESSED / \"train_data.csv\")\n",
-        "test_df = pd.read_csv(DATA_PROCESSED / \"test_data.csv\")\n",
-        "FEATURES = [\n",
-        "    \"day_of_week\",\n",
-        "    \"is_weekend\",\n",
-        "    \"day_of_year\",\n",
-        "    \"qty_lag_1\",\n",
-        "    \"qty_lag_7\",\n",
-        "    \"qty_lag_14\",\n",
-        "    \"qty_roll_7\",\n",
-        "    \"qty_roll_14\",\n",
-        "    \"is_holiday\",\n",
-        "    \"days_to_holiday\",\n",
-        "    \"days_since_holiday\",\n",
-        "    \"is_fasting\"\n",
-        "]\n",
-        "\n",
-        "TARGET = \"target_qty\"\n",
-        "\n",
-        "X_train = train_df[FEATURES]\n",
-        "y_train = train_df[TARGET]\n",
-        "\n",
-        "X_test = test_df[FEATURES]\n",
-        "y_test = test_df[TARGET]\n",
-        "\n",
-        "model = LinearRegression()\n",
-        "model.fit(X_train, y_train)\n",
-        "\n",
-        "y_pred = model.predict(X_test)\n",
-        "\n",
-        "mae = mean_absolute_error(y_test, y_pred)\n",
-        "print(\"MAE:\", mae)\n",
-        "\n",
-        "# SKU Level MAE to know which product is predictable\n",
-        "test_df[\"prediction\"] = y_pred\n",
-        "test_df[\"abs_error\"] = abs(test_df[\"prediction\"] - test_df[\"target_qty\"])\n",
-        "\n",
-        "sku_mae = (\n",
-        "    test_df.groupby(\"sku_id\")[\"abs_error\"]\n",
-        "    .mean()\n",
-        "    .sort_values(ascending=False)\n",
-        ")\n",
-        "\n",
-        "print(sku_mae.head(513))\n"
-      ]
-    }
-  ],
-  "metadata": {
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
     "colab": {
-      "provenance": []
+     "base_uri": "https://localhost:8080/",
+     "height": 211
     },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.14.0"
+    "id": "Nw9KP22KuqTi",
+    "outputId": "40b8e4a0-b2b9-4d6d-de5a-d917a25b90a8"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Daily totals — MAE: 990.589, MAPE: 36.44%, WAPE: 33.83%\n",
+      "Monthly totals — MAE: 10569.832, MAPE: 13.64%, WAPE: 12.82%\n"
+     ]
     }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from src.config import DATA_PROCESSED\n",
+    "from src.feature_engineering import (\n",
+    "    add_sku_rolling_stats,\n",
+    "    add_time_aware_category_te,\n",
+    ")\n",
+    "\n",
+    "def mape(y_true, y_pred):\n",
+    "    mask = y_true > 0\n",
+    "    return np.mean(np.abs((y_true[mask] - y_pred[mask]) / y_true[mask]) * 100) if mask.any() else 0.0\n",
+    "\n",
+    "def wape(y_true, y_pred):\n",
+    "    denom = np.abs(y_true).sum()\n",
+    "    return np.abs(y_true - y_pred).sum() / denom * 100 if denom > 0 else 0.0\n",
+    "\n",
+    "train_df = pd.read_csv(DATA_PROCESSED / \"train_data.csv\")\n",
+    "test_df = pd.read_csv(DATA_PROCESSED / \"test_data.csv\")\n",
+    "\n",
+    "# ensure date column is datetime\n",
+    "test_df[\"date\"] = pd.to_datetime(test_df[\"date\"])\n",
+    "\n",
+    "FEATURES = [\n",
+    "    \"day_of_week\",\n",
+    "    \"is_weekend\",\n",
+    "    \"day_of_year\",\n",
+    "    \"qty_lag_1\",\n",
+    "    \"qty_lag_7\",\n",
+    "    \"qty_lag_14\",\n",
+    "    \"qty_roll_7\",\n",
+    "    \"qty_roll_14\",\n",
+    "    \"is_holiday\",\n",
+    "    \"days_to_holiday\",\n",
+    "    \"days_since_holiday\",\n",
+    "    \"is_fasting\"\n",
+    "]\n",
+    "\n",
+    "TARGET = \"target_qty\"\n",
+    "train_df = train_df.sort_values([\"sku_id\", \"date\"])\n",
+    "test_df = test_df.sort_values([\"sku_id\", \"date\"])\n",
+    "\n",
+    "train_df = add_sku_rolling_stats(train_df, 28)\n",
+    "test_df = add_sku_rolling_stats(test_df, 28)\n",
+    "\n",
+    "train_df = add_time_aware_category_te(train_df, TARGET)\n",
+    "test_df = add_time_aware_category_te(test_df, TARGET)\n",
+    "\n",
+    "FINAL_FEATURES = FEATURES + [\n",
+    "    \"sku_avg_28d\",\n",
+    "    \"sku_std_28d\",\n",
+    "    \"category_te\",\n",
+    "]\n",
+    "\n",
+    "X_train = train_df[FINAL_FEATURES]\n",
+    "y_train = train_df[TARGET]\n",
+    "\n",
+    "X_test = test_df[FINAL_FEATURES]\n",
+    "y_test = test_df[TARGET]\n",
+    "\n",
+    "# Impute missing values (fit imputer on training set only)\n",
+    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "X_train_imp = pd.DataFrame(imputer.fit_transform(X_train), columns=FINAL_FEATURES, index=X_train.index)\n",
+    "X_test_imp = pd.DataFrame(imputer.transform(X_test), columns=FINAL_FEATURES, index=X_test.index)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train_imp, y_train)\n",
+    "\n",
+    "# predictions and attach to test_df\n",
+    "y_pred = model.predict(X_test_imp)\n",
+    "test_df = test_df.copy()\n",
+    "test_df.loc[X_test_imp.index, \"prediction\"] = y_pred\n",
+    "\n",
+    "# --- Aggregate to daily totals and compute metrics ---\n",
+    "daily_agg = test_df.groupby(\"date\").agg(actual=(\"target_qty\", \"sum\"), pred=(\"prediction\", \"sum\")).reset_index()\n",
+    "\n",
+    "daily_mae = mean_absolute_error(daily_agg[\"actual\"], daily_agg[\"pred\"])\n",
+    "daily_mape = mape(daily_agg[\"actual\"], daily_agg[\"pred\"])\n",
+    "daily_wape = wape(daily_agg[\"actual\"], daily_agg[\"pred\"])\n",
+    "\n",
+    "# --- Aggregate to monthly totals and compute metrics ---\n",
+    "monthly_agg = (\n",
+    "    test_df\n",
+    "    .groupby(test_df[\"date\"].dt.to_period(\"M\"))\n",
+    "    .agg(actual=(\"target_qty\", \"sum\"), pred=(\"prediction\", \"sum\"))\n",
+    "    #.mean()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "monthly_mae = mean_absolute_error(monthly_agg[\"actual\"], monthly_agg[\"pred\"])\n",
+    "monthly_mape = mape(monthly_agg[\"actual\"], monthly_agg[\"pred\"])\n",
+    "monthly_wape = wape(monthly_agg[\"actual\"], monthly_agg[\"pred\"])\n",
+    "\n",
+    "# Print only the requested totals\n",
+    "print(\"Daily totals — MAE: {:.3f}, MAPE: {:.2f}%, WAPE: {:.2f}%\".format(daily_mae, daily_mape, daily_wape))\n",
+    "print(\"Monthly totals — MAE: {:.3f}, MAPE: {:.2f}%, WAPE: {:.2f}%\".format(monthly_mae, monthly_mape, monthly_wape))\n"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model to C:\\Users\\P A V I L I O N\\Desktop\\IML Demand forcasting\\Demand_Forcasting\\models\\linear_regression.joblib\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the trained model (joblib dump of the fitted estimator only)\n",
+    "try:\n",
+    "    from joblib import dump\n",
+    "    from src.config import MODELS_DIR\n",
+    "\n",
+    "    MODELS_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "    model_path = MODELS_DIR / \"linear_regression.joblib\"\n",
+    "    dump(model, model_path)\n",
+    "    print(f\"Saved model to {model_path}\")\n",
+    "except NameError:\n",
+    "    print(\"No trained 'model' found - run the training cell first.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Model save failed: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
