--- a/notebooks/01_run_pipeline.ipynb
+++ b/notebooks/01_run_pipeline.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e4437391",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\P A V I L I O N\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -22,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7e8aef9a",
    "metadata": {},
    "outputs": [
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c2ce6bf3",
    "metadata": {},
    "outputs": [
@@ -53,11 +61,11 @@
      "output_type": "stream",
      "text": [
       "Monthly per-SKU predictions generated.\n",
-      "===== DAILY vs ACTUAL =====\n",
+      "===== DAILY WALK_FORWARD vs ACTUAL =====\n",
       "Daily MAE: 2.2019\n",
       "Daily MAPE: 52.65%\n",
       "Daily WAPE: 40.48%\n",
-      "===== MONTHLY vs ACTUAL =====\n",
+      "===== MONTHLY WALK_FORWARD vs ACTUAL =====\n",
       "Monthly MAE: 20.9810\n",
       "Monthly MAPE: 21.00%\n",
       "Monthly WAPE: 13.69%\n"
@@ -65,72 +73,151 @@
     }
    ],
    "source": [
-    "from src.evaluate import evaluate_model\n",
-    "evaluate_model()"
+    "from src.walk_forward_forecast import walk_forward_forecast\n",
+    "walk_forward_forecast()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f7c47333",
+   "execution_count": 3,
+   "id": "41df9dce",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Histogram-based GBR model for recursive forecasting.\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Rolling forward: 100%|██████████| 513/513 [05:41<00:00,  1.50it/s]\n"
+      "Recursive Forcast: 100%|██████████| 513/513 [14:22<00:00,  1.68s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rolling-forward forecasting completed.\n",
-      "===== DAILY ROLLING vs ACTUAL =====\n",
+      "Recursive forecasting completed.\n",
+      "===== DAILY RECURSIVE vs ACTUAL =====\n",
       "MAE  : 3.40\n",
+      "MAPE : 82.28%\n",
       "WAPE : 50.26%\n",
       "\n",
-      "===== MONTHLY ROLLING vs ACTUAL =====\n",
+      "===== MONTHLY RECURSIVE vs ACTUAL =====\n",
       "MAE  : 60.74\n",
+      "MAPE : 38.83%\n",
       "WAPE : 35.79%\n",
-      "Saved: rolling_daily_vs_actual.csv and rolling_monthly_vs_actual.csv\n"
+      "Saved: recursive_daily_vs_actual.csv and recursive_monthly_vs_actual.csv\n"
      ]
     }
    ],
    "source": [
-    "from src.rolling_forward_evaluate import rolling_forecast\n",
-    "from src.rolling_data_processing import evaluate_rolling_forecast\n",
-    "rolling_forecast()\n",
-    "evaluate_rolling_forecast()"
+    "from src.recursive_forecast import recursive_forecast\n",
+    "from src.recursive_forcast_output_processing import process_recursive_forecast_output\n",
+    "recursive_forecast(90, \"hist_gbr\")\n",
+    "process_recursive_forecast_output()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a2b2c3b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\P A V I L I O N\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Histogram-based GBR model for recursive forecasting.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Recursive Forcast: 100%|██████████| 513/513 [14:50<00:00,  1.74s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recursive forecasting completed.\n",
+      "===== DAILY RECURSIVE vs ACTUAL =====\n",
+      "MAE  : 3.77\n",
+      "MAPE : 89.81%\n",
+      "WAPE : 57.82%\n",
+      "\n",
+      "===== MONTHLY RECURSIVE vs ACTUAL =====\n",
+      "MAE  : 85.92\n",
+      "MAPE : 43.89%\n",
+      "WAPE : 45.47%\n",
+      "Saved: recursive_daily_vs_actual.csv and recursive_monthly_vs_actual.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.recursive_forecast import recursive_forecast\n",
+    "from src.recursive_forcast_output_processing import process_recursive_forecast_output\n",
+    "recursive_forecast(150, \"hist_gbr\")\n",
+    "process_recursive_forecast_output()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0f59fc07",
+   "id": "f7c47333",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "===== DAILY ROLLING vs ACTUAL =====\n",
-      "MAE  : 3.40\n",
-      "MAPE : 82.28%\n",
-      "WAPE : 50.26%\n",
+      "Using Linear Regression model for recursive forecasting.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Recursive Forcast: 100%|██████████| 513/513 [03:07<00:00,  2.74it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recursive forecasting completed.\n",
+      "===== DAILY RECURSIVE vs ACTUAL =====\n",
+      "MAE  : 4.76\n",
+      "MAPE : 94.83%\n",
+      "WAPE : 70.35%\n",
       "\n",
-      "===== MONTHLY ROLLING vs ACTUAL =====\n",
-      "MAE  : 60.74\n",
-      "MAPE : 38.83%\n",
-      "WAPE : 35.79%\n",
-      "Saved: rolling_daily_vs_actual.csv and rolling_monthly_vs_actual.csv\n"
+      "===== MONTHLY RECURSIVE vs ACTUAL =====\n",
+      "MAE  : 77.59\n",
+      "MAPE : 69.53%\n",
+      "WAPE : 45.72%\n",
+      "Saved: recursive_daily_vs_actual.csv and recursive_monthly_vs_actual.csv\n"
      ]
     }
    ],
    "source": [
-    "from src.rolling_data_processing import evaluate_rolling_forecast\n",
-    "evaluate_rolling_forecast()"
+    "from src.recursive_forecast import recursive_forecast\n",
+    "from src.recursive_forcast_output_processing import process_recursive_forecast_output\n",
+    "recursive_forecast(90, \"linear\")\n",
+    "process_recursive_forecast_output()\n"
    ]
   }
  ],
