--- a/notebooks/02_run_pipeline.ipynb
+++ b/notebooks/02_run_pipeline.ipynb
@@ -79,10 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "41df9dce",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\P A V I L I O N\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -94,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Recursive Forcast: 100%|██████████| 513/513 [14:22<00:00,  1.68s/it]\n"
+      "Recursive Forcast: 100%|██████████| 513/513 [06:27<00:00,  1.32it/s]\n"
      ]
     },
     {
