--- a/notebooks/05_recursive_plots.ipynb
+++ b/notebooks/05_recursive_plots.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -134,9 +134,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "from src.config import (DATA_PROCESSED)\n",
-        "# ============================\n",
-        "# FIX THESE TWO PATHS ONLY\n",
-        "# ============================\n",
+        "\n",
         "DAILY_COMPARE_PATH = DATA_PROCESSED / \"recursive_daily_vs_actual.csv\"\n",
         "MONTHLY_COMPARE_PATH = DATA_PROCESSED / \"recursive_monthly_vs_actual.csv\"\n",
         "\n",
@@ -251,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -274,7 +272,7 @@
       ],
       "source": [
         "# Per SKU scatter plot\n",
-        "sku_id = daily[\"sku_id\"].iloc[0]  # pick any SKU you want\n",
+        "sku_id = daily[\"sku_id\"].iloc[0]  # Example SKU ID\n",
         "\n",
         "sku_daily = daily[daily[\"sku_id\"] == sku_id]\n",
         "\n",
@@ -310,7 +308,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
