finalizing the project

--- a/notebooks/02_run_pipeline.ipynb
+++ b/notebooks/02_run_pipeline.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e4437391",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\P A V I L I O N\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -30,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7e8aef9a",
    "metadata": {},
    "outputs": [
@@ -38,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Global MAE: 2.20\n"
+      "Global MAE: 2.21\n"
      ]
     }
    ],
@@ -52,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c2ce6bf3",
    "metadata": {},
    "outputs": [
@@ -62,13 +54,13 @@
      "text": [
       "Monthly per-SKU predictions generated.\n",
       "===== DAILY WALK_FORWARD vs ACTUAL =====\n",
-      "Daily MAE: 2.2019\n",
-      "Daily MAPE: 52.65%\n",
-      "Daily WAPE: 40.48%\n",
+      "Daily MAE: 2.2128\n",
+      "Daily MAPE: 52.87%\n",
+      "Daily WAPE: 40.68%\n",
       "===== MONTHLY WALK_FORWARD vs ACTUAL =====\n",
-      "Monthly MAE: 20.9810\n",
-      "Monthly MAPE: 21.00%\n",
-      "Monthly WAPE: 13.69%\n"
+      "Monthly MAE: 21.3516\n",
+      "Monthly MAPE: 21.37%\n",
+      "Monthly WAPE: 13.98%\n"
      ]
     }
    ],
@@ -79,18 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "41df9dce",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\P A V I L I O N\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -102,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Recursive Forcast: 100%|██████████| 513/513 [06:27<00:00,  1.32it/s]\n"
+      "Recursive Forcast: 100%|██████████| 513/513 [06:07<00:00,  1.40it/s]\n"
      ]
     },
     {
@@ -111,14 +95,14 @@
      "text": [
       "Recursive forecasting completed.\n",
       "===== DAILY RECURSIVE vs ACTUAL =====\n",
-      "MAE  : 3.40\n",
-      "MAPE : 82.28%\n",
-      "WAPE : 50.26%\n",
+      "MAE  : 3.17\n",
+      "MAPE : 80.48%\n",
+      "WAPE : 47.06%\n",
       "\n",
       "===== MONTHLY RECURSIVE vs ACTUAL =====\n",
-      "MAE  : 60.74\n",
-      "MAPE : 38.83%\n",
-      "WAPE : 35.79%\n",
+      "MAE  : 54.42\n",
+      "MAPE : 34.67%\n",
+      "WAPE : 32.34%\n",
       "Saved: recursive_daily_vs_actual.csv and recursive_monthly_vs_actual.csv\n"
      ]
     }
@@ -127,23 +111,15 @@
     "from src.recursive_forecast import recursive_forecast\n",
     "from src.recursive_forcast_output_processing import process_recursive_forecast_output\n",
     "recursive_forecast(90, \"hist_gbr\")\n",
-    "process_recursive_forecast_output()\n"
+    "process_recursive_forecast_output(\"hist_gbr\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a2b2c3b5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\P A V I L I O N\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -155,7 +131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Recursive Forcast: 100%|██████████| 513/513 [14:50<00:00,  1.74s/it]\n"
+      "Recursive Forcast: 100%|██████████| 513/513 [14:41<00:00,  1.72s/it]\n"
      ]
     },
     {
@@ -164,14 +140,14 @@
      "text": [
       "Recursive forecasting completed.\n",
       "===== DAILY RECURSIVE vs ACTUAL =====\n",
-      "MAE  : 3.77\n",
-      "MAPE : 89.81%\n",
-      "WAPE : 57.82%\n",
+      "MAE  : 3.57\n",
+      "MAPE : 88.70%\n",
+      "WAPE : 54.68%\n",
       "\n",
       "===== MONTHLY RECURSIVE vs ACTUAL =====\n",
-      "MAE  : 85.92\n",
-      "MAPE : 43.89%\n",
-      "WAPE : 45.47%\n",
+      "MAE  : 78.95\n",
+      "MAPE : 40.42%\n",
+      "WAPE : 41.99%\n",
       "Saved: recursive_daily_vs_actual.csv and recursive_monthly_vs_actual.csv\n"
      ]
     }
@@ -180,12 +156,17 @@
     "from src.recursive_forecast import recursive_forecast\n",
     "from src.recursive_forcast_output_processing import process_recursive_forecast_output\n",
     "recursive_forecast(150, \"hist_gbr\")\n",
-    "process_recursive_forecast_output()\n"
+    "process_recursive_forecast_output(\"hist_gbr\")\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "f7c47333",
    "metadata": {},
    "outputs": [
@@ -200,24 +181,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Recursive Forcast: 100%|██████████| 513/513 [03:07<00:00,  2.74it/s]\n"
+      "Recursive Forcast: 100%|██████████| 513/513 [03:06<00:00,  2.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recursive forecasting completed.\n",
+      "Linear Regression recursive forecasting completed.\n",
       "===== DAILY RECURSIVE vs ACTUAL =====\n",
-      "MAE  : 4.76\n",
-      "MAPE : 94.83%\n",
-      "WAPE : 70.35%\n",
+      "MAE  : 4.57\n",
+      "MAPE : 92.20%\n",
+      "WAPE : 67.90%\n",
       "\n",
       "===== MONTHLY RECURSIVE vs ACTUAL =====\n",
-      "MAE  : 77.59\n",
-      "MAPE : 69.53%\n",
-      "WAPE : 45.72%\n",
-      "Saved: recursive_daily_vs_actual.csv and recursive_monthly_vs_actual.csv\n"
+      "MAE  : 80.37\n",
+      "MAPE : 70.64%\n",
+      "WAPE : 47.76%\n",
+      "Saved: linear_recursive_daily_vs_actual.csv and linear_recursive_monthly_vs_actual.csv\n"
      ]
     }
    ],
@@ -225,7 +206,7 @@
     "from src.recursive_forecast import recursive_forecast\n",
     "from src.recursive_forcast_output_processing import process_recursive_forecast_output\n",
     "recursive_forecast(90, \"linear\")\n",
-    "process_recursive_forecast_output()\n"
+    "process_recursive_forecast_output(\"linear\")\n"
    ]
   }
  ],
