--- a/notebooks/linear_regression.ipynb
+++ b/notebooks/linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -16,8 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Daily totals — MAE: 990.589, MAPE: 36.44%, WAPE: 33.83%\n",
-      "Monthly totals — MAE: 10569.832, MAPE: 13.64%, WAPE: 12.82%\n"
+      "Saved model to C:\\Users\\P A V I L I O N\\Desktop\\IML Demand forcasting\\Demand_Forcasting\\models\\linear_regression.joblib\n"
      ]
     }
    ],
@@ -27,19 +26,12 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from src.config import DATA_PROCESSED\n",
+    "from joblib import dump\n",
+    "from src.config import (DATA_PROCESSED, MODELS_DIR)\n",
     "from src.feature_engineering import (\n",
     "    add_sku_rolling_stats,\n",
     "    add_time_aware_category_te,\n",
     ")\n",
-    "\n",
-    "def mape(y_true, y_pred):\n",
-    "    mask = y_true > 0\n",
-    "    return np.mean(np.abs((y_true[mask] - y_pred[mask]) / y_true[mask]) * 100) if mask.any() else 0.0\n",
-    "\n",
-    "def wape(y_true, y_pred):\n",
-    "    denom = np.abs(y_true).sum()\n",
-    "    return np.abs(y_true - y_pred).sum() / denom * 100 if denom > 0 else 0.0\n",
     "\n",
     "train_df = pd.read_csv(DATA_PROCESSED / \"train_data.csv\")\n",
     "test_df = pd.read_csv(DATA_PROCESSED / \"test_data.csv\")\n",
@@ -92,54 +84,8 @@
     "model = LinearRegression()\n",
     "model.fit(X_train_imp, y_train)\n",
     "\n",
-    "# predictions and attach to test_df\n",
-    "y_pred = model.predict(X_test_imp)\n",
-    "test_df = test_df.copy()\n",
-    "test_df.loc[X_test_imp.index, \"prediction\"] = y_pred\n",
-    "\n",
-    "# --- Aggregate to daily totals and compute metrics ---\n",
-    "daily_agg = test_df.groupby(\"date\").agg(actual=(\"target_qty\", \"sum\"), pred=(\"prediction\", \"sum\")).reset_index()\n",
-    "\n",
-    "daily_mae = mean_absolute_error(daily_agg[\"actual\"], daily_agg[\"pred\"])\n",
-    "daily_mape = mape(daily_agg[\"actual\"], daily_agg[\"pred\"])\n",
-    "daily_wape = wape(daily_agg[\"actual\"], daily_agg[\"pred\"])\n",
-    "\n",
-    "# --- Aggregate to monthly totals and compute metrics ---\n",
-    "monthly_agg = (\n",
-    "    test_df\n",
-    "    .groupby(test_df[\"date\"].dt.to_period(\"M\"))\n",
-    "    .agg(actual=(\"target_qty\", \"sum\"), pred=(\"prediction\", \"sum\"))\n",
-    "    .reset_index()\n",
-    ")\n",
-    "\n",
-    "monthly_mae = mean_absolute_error(monthly_agg[\"actual\"], monthly_agg[\"pred\"])\n",
-    "monthly_mape = mape(monthly_agg[\"actual\"], monthly_agg[\"pred\"])\n",
-    "monthly_wape = wape(monthly_agg[\"actual\"], monthly_agg[\"pred\"])\n",
-    "\n",
-    "# Print only the requested totals\n",
-    "print(\"Daily totals — MAE: {:.3f}, MAPE: {:.2f}%, WAPE: {:.2f}%\".format(daily_mae, daily_mape, daily_wape))\n",
-    "print(\"Monthly totals — MAE: {:.3f}, MAPE: {:.2f}%, WAPE: {:.2f}%\".format(monthly_mae, monthly_mape, monthly_wape))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved model to C:\\Users\\P A V I L I O N\\Desktop\\IML Demand forcasting\\Demand_Forcasting\\models\\linear_regression.joblib\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Save the trained model (joblib dump of the fitted estimator only)\n",
+    "# Save the trained model\n",
     "try:\n",
-    "    from joblib import dump\n",
-    "    from src.config import MODELS_DIR\n",
-    "\n",
     "    MODELS_DIR.mkdir(parents=True, exist_ok=True)\n",
     "    model_path = MODELS_DIR / \"linear_regression.joblib\"\n",
     "    dump(model, model_path)\n",
@@ -147,15 +93,8 @@
     "except NameError:\n",
     "    print(\"No trained 'model' found - run the training cell first.\")\n",
     "except Exception as e:\n",
-    "    print(f\"Model save failed: {e}\")"
+    "    print(f\"Model save failed: {e}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
